[package]
name = "mdbook-regexreplace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version="4.4.0", features=["deprecated"] }
markdown = "1.0.0-alpha.12"
mdbook = "0.4.34"
once_cell = "1.18.0"
regex = "1.9.3"
semver = "1.0.18"
serde_json = "1.0.105"
toml = "^0.5.11"

#[preprocessor.regexreplace.link_replacements]
#'^[^(?:http)](?path:.*)README.md]' = '${path}index.md'
