[package]
name = "mdbook-replace"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.0", features = ["deprecated"] }
mdbook = { version = "0.4.34", default-features = false }
semver = "1.0.18"
serde_json = "1.0.105"
toml = "0.5.11"
mdutils = { path = "../mdutils", version = "0.0.1" }
relative-path = "1.9.3"
url = "2.5.2"
