[package]
name = "mdsummary"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.0", features = ["deprecated", "derive"] }
glob = "0.3.1"
mdutil-lib = { path = "../mdutil-lib", version = "0.0.1" }
prettydiff = { version = "0.7.0", default-features = false }
