[package]
name = "mdsummary"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mdutils = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
glob = "0.3.1"
prettydiff = { version = "0.7.0", default-features = false }
